# abacuscm

./: .dockerignore  .gitignore  BUGLIST  CONTRIBUTIONS  Dockerfile  Makefile  Makefile.am  Makefile.conf.sample  Makefile.inc  README  configure.ac
certs/: addserver.sh  makeca.sh  openssl.conf
conf/: client.conf  client.conf.sample  java.policy  marker.conf  marker.conf.sample  rijndael.iv  rijndael.key  server.conf  server.conf.sample
db/: reload_sql.sh  structure.sql
doc/: .gitignore  Batch.txt  Compiling.txt  Creating_a_Contest.txt  Makefile.am  RunningClient.txt  online-standings.txt
doc/docbook/: Makefile  abacuscm.xml  administrator-core.xml  administrator-webapp.xml  administrator.xml  contestant.xml  developer-core.xml  developer-webapp.xml  developer.xml  docker.xml  fo.xsl  fop.xconf  licensing.xml  profile-qt-icpcsa.xsl  profile-qt.xsl  profile-web-icpcsa.xsl  profile-web.xsl  profile.xsl  usermanual.xml  xhtml.xsl
doc/html/: .gitignore  abacuscm.css
doc/html/images/: README
doc/usermanual/: Makefile  Makefile.am
docker/: abacuscm-secret-web.xml  abacuscm.xml  admin.conf  configure.sh  cx_Freeze_debian.patch  cx_Freeze_py3.5.patch  dpkg-excludes  inichange.py  jetty-contexts.xml  jetty-deploy.xml  marker-supervisord.conf  marker.conf  marker_iptables.sh  populate.py  root.xml  run.py  run.sh  server-supervisord.conf  server.conf  settings.xml  standings.conf  standings.py  supervisord.conf
docker/doc/: bootstrap.min.css  index.html
docker/start.d/: https.ini
docker/webapps/: docs.xml  root.xml
include/: aboutdialog.h  acmconfig.h  addgroup.h  adduser.h  alert.xpm  buffer.h  changepassworddialog.h  clarificationreply.h  clarificationrequest.h  clientaction.h  clientconnection.h  clienteventregistry.h  clientlistener.h  compiledproblemmarker.h  compiledproblemtype.h  compileroutputdialog.h  config.h  dbcon.h  eventregister.h  guievent.h  hashpw.h  interactiveproblemmarker.h  judgedecisiondialog.h  logger.h  logindialog.h  mainwindow.h  marker.h  markers.h  message.h  message_creategroup.h  message_createserver.h  message_createuser.h  message_type_ids.h  messageblock.h  messagebuilder.h  misc.h  moduleloader.h  peermessenger.h  permissionmap.h  permissions.h  (+28 more)
misc/: abacuscm.css  addproblems.py  addusers.py  bootstrap.sh  installclient.sh  installmarker.sh  qtdeps.pl  qtdeps.sh  runmarker.sh  setstart.sh  setstop.sh  setup-server.sh  standings.pl  valgrind.suppressions
misc/mitm/: mitm.sh  mitm_serv.sh
misc/standings/: standings.css  standings.html  standings.js  standings.pl
src/: .gitignore  abacus.C  abacusd.C  abacustool.C  acmconfig.C  act_addgroup.C  act_addserver.C  act_adduser.C  act_auth.C  act_bonus.C  act_clarify.C  act_contesttime.C  act_events.C  act_mark.C  act_passwd.C  act_problem_subscription.C  act_problemmanip.C  act_problemtypes.C  act_serverlist.C  act_standings.C  act_startstop.C  act_status.C  act_submit.C  act_whatami.C  balloon.C  batch.C  buffer.C  c_cpp_userprog.C  clientaction.C  clientconnection.C  clienteventregistry.C  clientlistener.C  compiledproblemmarker.C  config.C  creategroup.C  createproblem.C  createuser.C  dbcon.C  dbmysql.C  eventregister.C  (+51 more)
testbench/: README  add.sh  client.conf  docker-compose.yml
testbench/conf/abacus/: marker.conf.override  server.conf.override
testbench/conf/abacus-certs/: ca.key  ca.srl  cacert.crt  server.crt  server.csr  server.key
testbench/conf/jetty-certs/: jetty.crt  jetty.key
testbench/contest/: server.conf.override
testbench/www/: docs.html  index.html
tests/bad_solutions/: bad_class.java  bad_class2.java  bad_class3.java  do_nothing_unicode.cpp  exception.cpp  infinite_stream.cpp  infinite_stream.py  sleep_forever.cpp  sleep_forever.py  spin_forever.java
tests/batch/: batch1.in  batch2.in  batch3.in  checker.py  client.conf  data.in  data.out  data2.in  data2.out  gentests.py  runtests.sh
tests/solutions/: compile_fail.cpp  compile_fail.java  do_nothing.py  exact.c  exact.cpp  exact.java  exact.py  exact.py3  exception.java  exception.py  infinite_stream.cpp  infinite_stream.py  package.java  pathclass.java  spin_forever.cpp  spin_forever.java  systest.c  systest.java  whitespace.py
tex/: qna.tex  usermanual.tex
ui/: aboutdialog.ui  addgroup.ui  adduser.ui  changepassworddialog.ui  clarificationreply.ui  clarificationrequest.ui  compileroutputdialog.ui  judgedecisiondialog.ui  judgedecisiondialog.ui.h  judgedecisiondialogbase.ui  logindialog.ui  mainwindow.ui  mainwindowbase.ui  problemconfigbase.ui  problemsubscription.ui  startstopdialog.ui  submit.ui  submit.ui.h  viewclarificationreply.ui  viewclarificationrequest.ui
webapp/: pom.xml
webapp/src/main/java/abacuscm/: AbacusServerConnection.java  AbacusService.java  AbacusUploader.java  BayeuxInitializer.java  CometdAbacusServerConnection.java
webapp/src/main/webapp/: .gitignore  abacuscm.css  application.js  clarifications.js  contest_status.js  debug.js  fileuploader.js  login.js  problems.js  resources.js  show_submission.js  standings-ajax.js  standings.js  styles.css  submissions.js
webapp/src/main/webapp/WEB-INF/: web.xml
webapp/src/main/webapp/jquery/: jquery-ui-1.8.9.custom.css  jquery-ui-1.8.9.custom.min.js
webapp/src/main/xml/: Makefile  body.html  index-debug.html  index-test.html  index.html  merge.xsl  standings.html
